--- a/GraphQL.Simplify/graph.simplify.core/graph.simplify.core.csproj
+++ b/GraphQL.Simplify/graph.simplify.core/graph.simplify.core.csproj
@@ -2,15 +2,34 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Version>1.0.2.1</Version>
+    <PackageId>GraphQL.Simplify</PackageId>
+    <Authors>Rocha, Willimar</Authors>
+    <Description>The objective is simplify the use from the GraphQL in a query.
+
+Generate automaticaly the arguments and the expression to use in repository.
+
+To academic development.</Description>
+    <Copyright>Willimar 2020 ©</Copyright>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageProjectUrl>https://github.com/willimar/GraphQL.Simplify</PackageProjectUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="crud.api.core" Version="1.0.1.1" />
+    <PackageReference Include="crud.api.core" Version="1.2.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel.Core" Version="2.2.0" />
     <PackageReference Include="GraphQL" Version="2.4.0" />
     <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="3.4.0" />
     <PackageReference Include="GraphQL.Server.Ui.Playground" Version="3.4.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
