--- a/GraphQL.Simplify/graph.simplify.core/graph.simplify.core.csproj
+++ b/GraphQL.Simplify/graph.simplify.core/graph.simplify.core.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>1.2.1.3</Version>
+    <Version>1.3.1.5</Version>
     <PackageId>GraphQL.Simplify</PackageId>
     <Authors>Rocha, Willimar</Authors>
     <Description>The objective is simplify the use from the GraphQL in a query.
@@ -18,10 +18,11 @@ To academic development.</Description>
 
   <ItemGroup>
     <PackageReference Include="crud.api.core" Version="1.2.3.2" />
+    <PackageReference Include="GraphQL.Server.Transports.AspNetCore.SystemTextJson" Version="4.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel.Core" Version="2.2.0" />
-    <PackageReference Include="GraphQL" Version="2.4.0" />
-    <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="3.4.0" />
-    <PackageReference Include="GraphQL.Server.Ui.Playground" Version="3.4.0" />
+    <PackageReference Include="GraphQL" Version="3.1.0" />
+    <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="4.0.1" />
+    <PackageReference Include="GraphQL.Server.Ui.Playground" Version="4.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.9" />
   </ItemGroup>
 
