--- a/GraphQL.Simplify/graph.simplify.core/graph.simplify.core.csproj
+++ b/GraphQL.Simplify/graph.simplify.core/graph.simplify.core.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>1.3.1.5</Version>
+    <Version>1.3.1.9</Version>
     <PackageId>GraphQL.Simplify</PackageId>
     <Authors>Rocha, Willimar</Authors>
     <Description>The objective is simplify the use from the GraphQL in a query.
@@ -15,6 +15,10 @@ To academic development.</Description>
     <PackageProjectUrl>https://github.com/willimar/GraphQL.Simplify</PackageProjectUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="queries\ArgumentFactory.cs~RF4a6e727.TMP" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="crud.api.core" Version="1.2.3.6" />
