--- a/GraphQL.Simplify/graph.simplify.core/graph.simplify.core.csproj
+++ b/GraphQL.Simplify/graph.simplify.core/graph.simplify.core.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>1.3.1.9</Version>
+    <Version>1.3.1.12</Version>
     <PackageId>GraphQL.Simplify</PackageId>
     <Authors>Rocha, Willimar</Authors>
     <Description>The objective is simplify the use from the GraphQL in a query.
@@ -22,12 +22,13 @@ To academic development.</Description>
 
   <ItemGroup>
     <PackageReference Include="crud.api.core" Version="1.2.3.6" />
-    <PackageReference Include="GraphQL.Server.Transports.AspNetCore.SystemTextJson" Version="4.0.1" />
+    <PackageReference Include="GraphQL.Server.Transports.AspNetCore.SystemTextJson" Version="4.3.0" />
+    <PackageReference Include="jwt.consumer" Version="1.0.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel.Core" Version="2.2.0" />
-    <PackageReference Include="GraphQL" Version="3.1.0" />
-    <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="4.0.1" />
-    <PackageReference Include="GraphQL.Server.Ui.Playground" Version="4.0.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.9" />
+    <PackageReference Include="GraphQL" Version="3.1.4" />
+    <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="4.3.0" />
+    <PackageReference Include="GraphQL.Server.Ui.Playground" Version="4.3.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
